--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,7 +12,37 @@
     tools:context="lightshadow.material_intro.MainActivity">
 
     <TextView
+        android:id="@+id/tv_hello"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_select"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_below="@+id/tv_hello"/>
+
+    <com.heinrichreimersoftware.materialintro.view.InkPageIndicator
+        android:id="@+id/vp_indicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vp_select"
+        app:pageIndicatorColor="@color/colorAccent"
+        app:currentPageIndicatorColor="@color/colorPrimaryDark"/>
+
+    <Button
+        android:id="@+id/btn_startIntro"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vp_indicator"
+        android:text="@string/start_intro"/>
+
+    <Button
+        android:id="@+id/btn_ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/vp_indicator"
+        android:layout_toEndOf="@+id/btn_startIntro"
+        android:text="@string/ok"/>
 </RelativeLayout>
