--- a/app/src/main/res/layout/fragment_intro_2.xml
+++ b/app/src/main/res/layout/fragment_intro_2.xml
@@ -5,9 +5,8 @@
 
     <ImageView
         android:id="@+id/iv_img2"
-        android:layout_width="380dp"
-        android:layout_height="200dp"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     <!--android:src="@mipmap/a083a2505"-->
 
     <TextView
